Fix Modal alignment to center

--- a/src/components/View/Results Releasing/LabOfficer.css
+++ b/src/components/View/Results Releasing/LabOfficer.css
@@ -149,6 +149,13 @@
     margin-left: 0rem !important;
     padding: 0.3rem;
   }
+
+  .modal-body {
+    position: relative;
+    flex: 1 1 auto;
+    padding: 1rem;
+    text-align: center;
+  }
   
   /* 
   
